Style the start menu

--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
 <body>
   <div class="container">
     <div class="start-menu">
-      <input type="text" class="player-X-name" placeholder="Enter name for Player X">
-      <input type="text" class="player-O-name" placeholder="Enter name for Player O">
-      <button class="start-game">Start Game</button>
+      <h1 class="title">Tic-Tac-Toe</h1>
+      <div class="player-selection">
+        <div class="x-selection">
+          <!-- <img src="images/x.png" alt="X" class="icon-x"> -->
+          <p>X</p>
+          <input type="text" class="player-X-name" placeholder="Enter name">
+        </div>
+        <div class="o-selection">
+          <!-- <img src="images/o.png" alt="X" class="icon-o"> -->
+          <p>O</p>
+          <input type="text" class="player-O-name" placeholder="Enter name">
+        </div>
+      </div>
+      <button class="start-game">START GAME</button>
     </div>
     <div class="game-info">
       <h1 class="turn"></h1>
